Updated na yung nationality

--- a/pages/admin/tabbingForm.html
+++ b/pages/admin/tabbingForm.html
@@ -200,44 +200,43 @@
                                             <label class="control-label bold font-xs">Citizenship</label>
                                             <select class="form-control" name="citizenship" id="citizenship">
                                             <option value="-">-</option>
-                                                <option value="mrWV0mBQ2V4-">American</option>
-                                                <option value="n4SV0mBQ2V4-">Arabic</option>
-                                                <option value="nYGV0mBQ2V4-">Australian</option>
-                                                <option value="nYWV0mBQ2V4-">Belgian</option>
-                                                <option value="nYyV0mBQ2V4-">Brazilian</option>
-                                                <option value="n4eV0mBQ2V4-">Brazilian</option>
-                                                <option value="noKV0mBQ2V4-">British</option>
-                                                <option value="m7WV0mBQ2V4-">Burmese</option>
-                                                <option value="lLWV0mBQ2V4-">Canadian</option>
-                                                <option value="n7WV0mBQ2V4-">Chinese</option>
-                                                <option value="nYeV0mBQ2V4-">Dutch</option>
-                                                <option value="nYKV0mBQ2V4-">Dutch</option>
-                                                <option value="noaV0mBQ2V4-">Egyptian</option>
-                                                <option value="nbWV0mBQ2V4-">Filipino</option>
-                                                <option value="n4OV0mBQ2V4-">Filipino-Chinese</option>
-                                                <option value="nYSV0mBQ2V4-">French</option>
-                                                <option value="nYCV0mBQ2V4-">Gerrman</option>
-                                                <option value="n4aV0mBQ2V4-">Greek</option>
-                                                <option value="noSV0mBQ2V4-">Indian</option>
-                                                <option value="n42V0mBQ2V4-">Indonesian</option>
-                                                <option value="noGV0mBQ2V4-">Iranian</option>
-                                                <option value="noCV0mBQ2V4-">Iraqui</option>
-                                                <option value="lbWV0mBQ2V4-">Irish</option>
-                                                <option value="noeV0mBQ2V4-">Israeli</option>
-                                                <option value="nYaV0mBQ2V4-">Italian</option>
-                                                <option value="mbWV0mBQ2V4-">Japanese</option>
-                                                <option value="nrWV0mBQ2V4-">Korean</option>
-                                                <option value="n4WV0mBQ2V4-">Mexican</option>
-                                                <option value="n4CV0mBQ2V4-">Nigerian</option>
-                                                <option value="noyV0mBQ2V4-">Polish</option>
-                                                <option value="nY2V0mBQ2V4-">Russian</option>
-                                                <option value="n4GV0mBQ2V4-">Singaporean</option>
-                                                <option value="noOV0mBQ2V4-">Spanish</option>
-                                                <option value="n4KV0mBQ2V4-">Sudanese</option>
-                                                <option value="nYOV0mBQ2V4-">Swiss</option>
-                                                <option value="mLWV0mBQ2V4-">Taiwanese</option>
-                                                <option value="noWV0mBQ2V4-">Thai</option>
-                                                <option value="no2V0mBQ2V4-">Turkish</option>
+                                                <option value="American-">American</option>
+                                                <option value="Arabic-">Arabic</option>
+                                                <option value="Australian-">Australian</option>
+                                                <option value="Belgian-">Belgian</option>
+                                                <option value="Brazilian-">Brazilian</option>
+                                                <option value="British-">British</option>
+                                                <option value="Burmese-">Burmese</option>
+                                                <option value="Canadian-">Canadian</option>
+                                                <option value="Chinese-">Chinese</option>
+                                                <option value="Dutch-">Dutch</option>
+                                                <option value="Dutch-">Dutch</option>
+                                                <option value="Egyptian-">Egyptian</option>
+                                                <option value="Filipino-">Filipino</option>
+                                                <option value="Filipino-Chinese">Filipino-Chinese</option>
+                                                <option value="French-">French</option>
+                                                <option value="German-">German</option>
+                                                <option value="Greek-">Greek</option>
+                                                <option value="Indian-">Indian</option>
+                                                <option value="Indonesian-">Indonesian</option>
+                                                <option value="Iranian-">Iranian</option>
+                                                <option value="Iraqui-">Iraqui</option>
+                                                <option value="Irish-">Irish</option>
+                                                <option value="Israeli-">Israeli</option>
+                                                <option value="Italian-">Italian</option>
+                                                <option value="Japanese-">Japanese</option>
+                                                <option value="Korean-">Korean</option>
+                                                <option value="Mexican-">Mexican</option>
+                                                <option value="Nigerian-">Nigerian</option>
+                                                <option value="Polish-">Polish</option>
+                                                <option value="Russian-">Russian</option>
+                                                <option value="Singaporean-">Singaporean</option>
+                                                <option value="Spanish-">Spanish</option>
+                                                <option value="Sudanese-">Sudanese</option>
+                                                <option value="Swiss-">Swiss</option>
+                                                <option value="Taiwanese-">Taiwanese</option>
+                                                <option value="Thai-">Thai</option>
+                                                <option value="Turkish-">Turkish</option>
 
                                             </select>
                                         </div>
